turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: not found: value red
	setCouleur(red)
                   ^Source:14: error: not found: value orange
	setCouleur(orange)
                   ^Source:20: error: not found: value violet
	setCouleur(violet)
                   ^