turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	for (k <- 1 to 90) {
		avance(100)
		recule(100)
		droite(1)
	}
	setCouleur(red)
	for (k <- 1 to 90) {
		avance(100)
		recule(100)
		droite(1)
	}
	setCouleur(orange)
	for (k <- 1 to 90) {
		avance(100)
		recule(100)
		droite(1)
	}
	setCouleur(violet)
	for (k <- 1 to 90) {
		avance(100)
		recule(100)
		droite(1)
	}
	
	
}
